增加javaFX窗口，优化指标，增加入库，历史对比逻辑